[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "springmap"
version = "0.1.0"
description = "Spring Boot Codebase Knowledge Graph CLI"
dependencies = [
    "click>=8.1.7"
]
requires-python = ">=3.9"

[project.scripts]
springmap = "springmap.cli:cli"